--- a/app/src/main/res/xml/widget_info.xml
+++ b/app/src/main/res/xml/widget_info.xml
@@ -4,7 +4,7 @@
     android:minHeight="80dp"
     android:targetCellWidth="2"
     android:targetCellHeight="2"
-    android:updatePeriodMillis="0"
+    android:updatePeriodMillis="3600000"
     android:initialLayout="@layout/widget_layout"
     android:configure="com.ankiwidget.config.WidgetConfigActivity"
     android:resizeMode="horizontal|vertical"
