--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -4,4 +4,5 @@
     <color name="widget_background_color">@android:color/system_neutral2_800</color>
     <color name="widget_text_color">@android:color/system_neutral1_50</color>
     <color name="widget_surface_color">@android:color/system_neutral1_900</color>
+    <color name="widget_background_frosted_color">#BB1C1B1F</color>
 </resources>
